--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+project.tar
+
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
 *.jpg
 *.jpeg
